--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,29 @@
-@import 'bulma/css/bulma.min.css';
+@import "bulma/css/bulma.min.css";
+
+/* LOADER
+---------------------------------------------------------------------- */
+.loader-holder {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.loader-holder svg {
+  animation: spin infinite 1s linear;
+  fill: hsl(171, 100%, 41%);
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
