Login UI implemented, login functionality added

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "bulma/css/bulma.min.css";
 
+/* HELPERS
+---------------------------------------------------------------------- */
+.is-smooth {
+  border-radius: 6px;
+}
+
 /* LOADER
 ---------------------------------------------------------------------- */
 .loader-holder {
