User details page completed

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 .is-smooth {
   border-radius: 6px;
 }
+.is-300x300 {
+  height: 300px;
+  width: 300px;
+}
 
 /* LOADER
 ---------------------------------------------------------------------- */
